<resources>
    <string name="app_name">Quick Eats</string>
    <string name="maps_api_key">AIzaSyDW3b8pmBAgUEghhbyvdGduRBxm8OZGUpE</string>

    <string name="checkoutheader">Checkout</string>
    <string name="chooseservicetype">Choose Service Type</string>
    <string name="tableserrvice">Table Service - Order will be sent to your table</string>
    <string name="tablenumber">Please Enter Your Table Number</string>
    <string name="selfservice">Self Service - I will collect the order from the counter</string>

    <string name="email">Email/Username</string>
    <string name="password">Password</string>
    <string name="str_login">LOGIN</string>
    <string name="str_submit">Submit</string>
    <string name="str_singup">Signup</string>
    <string name="str_forgot_pwd">Forgot Password?</string>
    <string name="str_fname">First Name</string>
    <string name="str_lname">Last Name</string>
    <string name="str_phone">Phone Number</string>
    <string name="applycoupon">APPLY COUPON</string>
    <string name="selectpayment">Select Payment Method</string>
    <string name="sort">Sort</string>
    <string name="mostpopular">Most Popular</string>
    <string name="rating">Rating</string>
    <string name="preparation">Preparation Time</string>
    <string name="distance">Distance</string>
    <string name="price">Price</string>
    <string name="done">DONE</string>
    <string name="cacel">Cancel</string>
    <string name="yourorderstatus">Your Order Status</string>
    <string name="info">Info</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="paymentoptions">Payment Options</string>
    <string name="addnewpaymentmethod">Add New Payment Method</string>
    <string name="details">Details</string>
    <string name="saved_address">Saved Address</string>
    <string name="payment_options">Payment Options</string>
    <string name="my_orders">My Orders</string>
    <string name="refer_a_friend">Refer a Friend</string>
    <string name="favorites">Favorites</string>
    <string name="help">Help</string>
    <string name="faq">FAQ</string>
    <string name="Legal">Legal</string>
    <string name="contactus">Contact Us</string>
    <string name="favorites_header">List of all Favorites rastaurant</string>
    <string name="ordersummary">Order Summary</string>
    <string name="ordertracker">Order Tracker</string>
    <string name="cardnumber">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="addcard">Add Card</string>
    <string name="next">NEXT</string>
    <string name="orderhistory">Order History</string>
    <string name="Orderdetails">Order Details</string>


    <string-array name="food_types">
        <item>South Indian</item>
        <item>Andra Style</item>
        <item>North Indian</item>
        <item>Chinese Food</item>
        <item> Cajun Food</item>
        <item>Thai Food</item>
        <item>Greek Cuisine</item>
    </string-array>
    <string-array name="filternames">
        <item>Your Faviourates</item>
        <item>Andhra Specials</item>
        <item>Mustard Brands</item>
        <item>Stretch-Curd Cheeses</item>
        <item>Hyderabad Dum Biryanies</item>
        <item>Pasta Dishes</item>
    </string-array>
    <string-array name="infotimings">
        <item>Sunday</item>
        <item>Monday - Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="dashboard_items_menu">
        <item>Details</item>
        <item>Saved Address</item>
        <item>Payment Options</item>
        <item>My Orders</item>
        <item>Refer a Friend</item>
        <item>Favorites</item>
        <item>Help</item>
        <item>Logout</item>
    </string-array>


    <string-array name="names">
        <item>Kristeen Coderre</item>
        <item>Libby Leslie</item>
        <item>Sherika Baynes</item>
        <item>Coralie Mckinny</item>
        <item>Jon Timms</item>
        <item>Ezekiel Cousineau</item>
        <item>Camila Mcgonigle</item>
        <item>Lakesha Sewell</item>
        <item>Hunter Kelsch</item>
        <item>Wendie Meltzer</item>
        <item>Doretha Preciado</item>
        <item>Marybelle Staton</item>
        <item>Angelo Robbins</item>
        <item>Norene Baptista</item>
        <item>Kathryn Mansfield</item>
        <item>Jamee Botts</item>
        <item>Jama Spiker</item>
        <item>Eugene Lazenby</item>
        <item>Tomika Blind</item>
        <item>Johana Massengill</item>
        <item>Randa Wommack</item>
        <item>Lang Medina</item>
        <item>Clyde Keena</item>
        <item>Malisa Knopp</item>
        <item>Yaeko Murakami</item>
        <item>Pa Gilmore</item>
        <item>Lashell Boyette</item>
        <item>Sherri Hogans</item>
        <item>Emelda Ahlquist</item>
        <item>Kala Bardin</item>
        <item>Alysia Parra</item>
        <item>Harris Yopp</item>
        <item>Claribel Freeney</item>
        <item>Laila Ekstrom</item>
        <item>Numbers Solomon</item>
        <item>Desirae Endicott</item>
        <item>Shandi Zahl</item>
        <item>Venessa Brunson</item>
        <item>Guillermo Abila</item>
        <item>Kenna Boles</item>
        <item>Daisey Mariscal</item>
        <item>Marry Gartrell</item>
        <item>Tyree Boateng</item>
        <item>Caryl Matheney</item>
        <item>Zenaida Perfecto</item>
        <item>Izola Stivers</item>
        <item>Rosario Rominger</item>
        <item>Bennett Donelson</item>
        <item>Sharell Hewes</item>
        <item>Kirk Sim</item>
    </string-array>
    <string name="nav_example1">Section with Header</string>
    <string name="invalidcreadentials">Invalid Username/Password</string>
    <string name="dialog_positive_btn">Ok</string>
    <string name="dialog_negitive_btn">Cancel</string>
    <string name="signoutcontext">Are you sure want to exit?</string>
    <string name="no_items_found">No Items Found</string>

    <string-array name="payment_type">
        <item>Cash on delivery</item>
        <item>pay from Paypal</item>
        <item>pay from Paytm</item>
        <item> pay from Brain Tree</item>
    </string-array>

</resources>
