<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/border">



    <TextView
        android:id="@+id/txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/signoutcontext"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/image"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/txt"
        android:layout_margin="20dp"
        android:weightSum="1">

    <Button
        android:id="@+id/btnok"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/dialog_positive_btn"
        android:background="@drawable/border"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        />
    <Button
        android:id="@+id/btncancel"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/dialog_negitive_btn"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/border"
        android:layout_below="@+id/image"
        />
    </RelativeLayout>
</RelativeLayout>