<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/sort"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgcancel"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/cancel" />
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/imgcancel"/>
    <LinearLayout
        android:id="@+id/llfilters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/line"
        android:layout_marginTop="10dp"
        android:weightSum="4"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:drawableTop="@drawable/cancel"
            android:layout_weight="1"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:text="@string/mostpopular"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:layout_weight="1"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/rating"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preparation"
            android:layout_weight="1"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/preparation"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:drawableTop="@drawable/delivery_truck"/>

    </LinearLayout>
    <TextView
        android:id="@+id/txtprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_below="@+id/llfilters"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:textSize="20dp"/>
    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray"
        android:layout_below="@+id/txtprice"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

    <LinearLayout
        android:id="@+id/llprice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/line2"
        android:layout_marginTop="10dp"
        android:weightSum="4"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:drawableTop="@drawable/cancel"
            android:layout_weight="1"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:text="@string/mostpopular"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:layout_weight="1"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/rating"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preparation"
            android:layout_weight="1"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/preparation"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:drawableTop="@drawable/delivery_truck"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/llprice"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimaryDark"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/done"
        android:textColor="@color/white"
        android:gravity="center"/>

</RelativeLayout>