<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/llheader"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imgback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/left_arrow"/>
        <TextView
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            style="@style/TextStyleLarge.Regular.white"
            android:text="@string/help"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/llheader">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            android:drawableRight="@drawable/rightarrow"
            android:drawablePadding="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/faq"/>

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            android:drawableRight="@drawable/rightarrow"
            android:drawablePadding="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/Legal"/>
        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            android:drawableRight="@drawable/rightarrow"
            android:drawablePadding="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/contactus"/>

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/gray"/>
    </LinearLayout>
</RelativeLayout>