<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:id="@+id/llheader"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imgback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/left_arrow"/>
        <TextView
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            style="@style/TextStyleLarge.Regular.white"
            android:text="@string/addcard"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/llheader"
        android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:drawableLeft="@drawable/creditcard"
        android:drawablePadding="10dp"
        android:hint="@string/cardnumber"
        android:textColorHint="@color/black"
        android:textSize="@dimen/text_size_16"
        android:background="@color/white"
       />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="2"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/questionmark"
            android:drawablePadding="10dp"
            android:text="MM/YYYY"
            android:textSize="@dimen/text_size_16"
            android:editable="false"
            android:cursorVisible="false"
            android:gravity="center"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cvv"
            android:textColorHint="@color/black"
            android:textSize="@dimen/text_size_16"
            android:gravity="center"
            android:drawableRight="@drawable/questionmark"
            android:layout_weight="1"/>
    </LinearLayout>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"></Spinner>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/text_size_16"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/next"/>
</RelativeLayout>