<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/left_arrow"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkoutheader"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10sp"
                android:textColor="@color/gray"
                android:textSize="18sp"
                android:textStyle="bold"/>


        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="This is an Eat In Order."
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingLeft="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseservicetype"
        android:paddingLeft="10dp"
        android:textColor="@color/gray"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layoutDirection="rtl"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:paddingLeft="30dp"
                android:text="@string/tableserrvice"
                android:textSize="12sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:layout_marginLeft="30dp"
                    android:textSize="11sp"
                    android:text="@string/tablenumber"/>
                <EditText
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:background="@drawable/border"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray"
                android:layout_marginTop="10dp"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layoutDirection="rtl"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:paddingLeft="30dp"
                android:text="@string/selfservice"
                android:textSize="12sp" />


        </RadioGroup>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/relabout"
                android:layout_width="match_parent"
                android:layout_height="70dp">
            <ImageView
                android:id="@+id/imgres"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/restaurent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/imgres"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="Alkhaleej"
                    android:textColor="@color/gray"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:text="Tacos Chukis - Seattle, Washington"/>
            </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/llcheckoutitems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/relabout"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>
    </ScrollView>
</LinearLayout>