<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imgback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/left_arrow"/>
        <TextView
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            style="@style/TextStyleLarge.Regular.white"
            android:text="@string/paymentoptions"/>
    </LinearLayout>


    <TextView
        style="@style/TextStyleLarge.Bold.gray"
        android:text="@string/selectpayment"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:background="@color/lightGray"
        android:textColor="@color/black"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_height="55dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imgvisalogo"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:background="@drawable/visalogo"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_toRightOf="@+id/imgvisalogo"
                android:layout_marginLeft="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Visa"
                    style="@style/TextStyleLarge.Bold.gray"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="**** **** **** 2154"
                    style="@style/TextStyleLarge.Bold.gray"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/rightarrow"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_height="55dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imgpaypallogo"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:background="@drawable/paypallogo"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_toRightOf="@+id/imgpaypallogo"
                android:layout_marginLeft="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Paypal"
                    style="@style/TextStyleLarge.Bold.gray"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="rubby@gmail.com"
                    style="@style/TextStyleLarge.Bold.gray"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/rightarrow"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_height="55dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imgpaytmlogo"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:background="@drawable/paytmlogo"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_toRightOf="@+id/imgpaytmlogo"
                android:layout_marginLeft="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Paytm"
                    style="@style/TextStyleLarge.Bold.gray"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="rubby@gmail.com"
                    style="@style/TextStyleLarge.Bold.gray"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/rightarrow"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/addnewpaymentmethod"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimaryDark"
        style="@style/TextStyleLarge.Regular.white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
</LinearLayout>